<resources>
    <string name="app_name">Buska</string>
    <string name="title_activity_add_marker">Lägg till buske</string>
    <string name="location_title">Plats</string>
    <string name="accept">Godkänn</string>
    <string name="location_text">Buska behöver behörighet till din plats för att kunna spåra din plats och leda dig till dina sparade buskar</string>
    <string name="all_permission_granted">Alla behörigheter har lagts till</string>
    <string name="permission_granted">Behörighet beviljad</string>
    <string name="permission_denied">Behörighet nekad</string>
    <string name="cancel">Avbryt</string>
    <string name="save">Spara</string>
    <string name="description">Innehåll:</string>
    <string name="name">Buskens namn:</string>
    <string name="add_buske__cancel_title">Är du säker att du vill du slänga denna busken?</string>
    <string name="add_buske__cancel_description">Om du godkänner, kommer busken slängas.</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="buske_delete_title">Är du säker att du vill ta bort denna busken?</string>
    <string name="buske_delete_description">Om du godkänner, kommer busken att tas bort.</string>
    <string name="buske_distance">Busken är %.2f m från din plats</string>
    <string name="my_bushes_slider">Mina Buskar</string>
    <string name="buske_deleted">Buske borttagen</string>
    <string name="buske_created">Buske sparad</string>
    <string name="edit_not_added">Vi har för tillfället inte lagt till möjligheten att ändra buskar.</string>
    <string name="add_buske_instruction">Du har för tillfället inga sparade buskar. För att lägga till en ny buske, klicka på den gröna plus-knappen.</string>
    <string name="camera_not_implemented">Vi har för tillfället inte implementerat kamera funktioner.</string>
    <string name="no_image">No image set</string>
    <string name="add_new_buske">Lägg till ny buske</string>
    <string name="buskes_direction">Buskens riktning</string>
    <string name="flashlight_info">Tips: Skaka mobilen för att sätta på och stänga av ficklampan</string>
</resources>
