<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMarkerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <fragment
            android:id="@+id/marker_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <FrameLayout
            android:id="@+id/markerFrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/markerImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:src="@drawable/buska_marker_140" />
        </FrameLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/marker_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/marker_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            tools:text="name_field" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/description"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/description_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|left"
            android:inputType="textAutoCorrect|textMultiLine"
            android:singleLine="false"
            tools:text="description_box" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">
            <Button
                android:id="@+id/marker_cancel_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/marker_save_button"
                android:layout_marginEnd="16dp"
                android:onClick="cancelBtnClick"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/marker_save_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="saveMarker"
                android:text="@string/save" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>